--- a/templates/popular_resorts.html
+++ b/templates/popular_resorts.html
@@ -13,8 +13,13 @@
     <a href="{{ url_for('skigroup') }}" class="{% if view=='skigroup'%}active{% endif %}">SkiGroup</a>
   </div>
   <div class="top-right">
-    <span class="user-name">{{ user_name }}</span>
-    <a href="{{ url_for('logout') }}" class="logout-button">Logout</a>
+    {% if is_logged_in %}
+      <span class="user-name">{{ user_name }}</span>
+      <a href="{{ url_for('logout') }}" class="logout-button">Logout</a>
+    {% else %}
+      <a href="{{ url_for('sign_in') }}" class="button">Sign In</a>
+      <a href="{{ url_for('sign_up') }}" class="button">Sign Up</a>
+    {% endif %}
   </div>
 
   <hr class="custom-hr">
