Added banner to relevant pages

--- a/templates/popular_resorts.html
+++ b/templates/popular_resorts.html
@@ -24,6 +24,10 @@
 
   <hr class="custom-hr">
 
+  <div class="hero-banner">
+    <div class="hero-text">Find your perfect stay, right by the slopes.</div>
+  </div>
+
   <div class="navigation">
     <a href="{{ url_for('home',page=1) }}">Home</a> |
     <a href="{{ url_for('price_comparison',page=1) }}">Price Comparison</a> |
