Added home button for SkiGroup need login

--- a/templates/need_login.html
+++ b/templates/need_login.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <div class="top-left-logo">SkiStays Euro</div>
+  <a href="{{ url_for('home') }}" class="button top-right">Back to Home</a>
   <hr class="custom-hr">
+  
   <div class="form-container" style="text-align:center;">
     <p>You must <a href="{{ url_for('sign_in') }}">sign in</a> to use SkiGroup.</p>
   </div>
